--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@
     left: 0;
     width: 100%;
     height: 100vh;
-    background: url('/assets/bg.png');
+    background: url('./assets/bg.png');
     background-repeat: no-repeat;
     background-size: cover;
     z-index: -1;
